deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unimarc-sudoc-reconciler
  # ⚠️ À ADAPTER : même namespace que le Deployment
  namespace: user-mhillion
  labels:
    app: unimarc-sudoc-reconciler
spec:
  selector: { app: unimarc-sudoc-reconciler }
  ports:
    - port: 80
      targetPort: 3000
